added addReads-Option. Missing addReads option did not show up because of a bug in Java 9, 10, see https://bugs.openjdk.java.net/browse/JDK-8207032.