@@ -6,8 +6,8 @@ mkdir -p doc
 # generate JavaDoc
 echo "javadoc $JAVADOC_OPTIONS -d doc --module-path mlib --module-source-path src $(find src -name \"*.java\")"
 $JAVA_HOME/bin/javadoc $JAVADOC_OPTIONS  -d doc \
-     --add-modules modb \
-     --add-exports modb/pkgb=modmain \
-    --module-path mlib \
+    --add-modules modb \
+    --add-exports modb/pkgb=modmain \
+    --add-reads modmain=modb \
     --module-source-path src $(find src -name "*.java") \
      2>&1
